# telegram-voice2text-bot

./: .dockerignore  .env.example  .env.example.short  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile_v0.1  Dockerfile_v0.2(через gpt)notexpose  Dockerfile_v0.3(через gpt)2stages  Makefile  PHASE1_ACCEPTANCE.md  README.md  VPS_SETUP.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements-full.txt  requirements.txt  run.sh
.claude/: settings.json  settings.local.json
.claude/commands/: init-memory-bank.md
.claude/memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.github/: WORKFLOW.md
.github/workflows/: build-and-deploy.yml  build-and-deploy.yml.old  build-and-tag.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0fcbf9e6b569_add_unique_daily_usage_and_check_.py  0fde9e5effe5_add_llm_tracking_fields.py  1fd70818303e_add_composite_indexes.py  29b64c26ec8d_add_interactive_transcription_tables.py  2c2dfd6dd905_populate_billing_descriptions.py  4a34681766dc_add_original_file_path_to_usage.py  7751fc657749_initial_schema.py  82545f6e6097_add_billing_system_tables.py  90152de5836d_grant_grace_period_existing_users.py  a1b2c3d4e5f6_cleanup_legacy_tables_and_fields.py  a9f3b2c8d1e4_add_updated_at_and_transcription_length.py  b1c2d3e4f5a6_update_prices_march2026.py  b3c7d9e1f2a5_add_variant_lookup_index.py  c4d8f1a2b3e5_seed_billing_data.py  caf955cd0f0e_add_price_versioning_fields.py  d02ab6c5efe0_add_description_to_subscription_prices_.py  e7a1b2c3d4f5_money_to_kopecks_checks_unique_index.py  f0514e20f750_add_parent_usage_id_to_usage_table.py  f9b400ff26ec_fix_duplicate_active_subscriptions.py
conductor/: index.md  product-guidelines.md  product.md  setup_state.json  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: python.md
debug/: 4CPU 4RAM (medium) 31min.txt  4CPU 4RAM (medium) queue.txt
docs/: DEPENDENCIES.md  README.md  TROUBLESHOOTING.md  queries.sql
docs/architecture/: transcription-flow.md
docs/deployment/: costs.md  docker.md  migration-runbook.md  vps-setup.md
docs/design/: web-version-prompt-short.md  web-version-prompt.md
docs/development/: architecture.md  database-migrations.md  dependencies.md  git-workflow.md  logging.md  testing.md
docs/features/: interactive-modes.md  llm-integration.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
memory-bank/: !memory-bank.md  UPDATE_SUMMARY_2025-01-09.md  activeContext.md  architecture-evolution.md  deployment-learnings.md  productContext.md  progress.md  projectbrief.md  systemPatterns-2025-01-09-pre-update.md  systemPatterns.md  techContext.md
prompts/: README.md  emoji.md  emoji_remove.md  length_longer.md  length_shorter.md  magic.md  refinement.md  structured.md  summary.md
scripts/: update-requirements.sh
src/: config.py  exceptions.py  health_check.py  main.py
tests/: conftest.py  helpers.py
(+237 files in other folders)
