[project]
name = "telegram-voice2text-bot"
version = "0.1.0"
description = "Telegram bot for voice message transcription using local Whisper"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    {name = "Konstantin Balakin"},
]
dependencies = [
    "python-telegram-bot>=22.5,<23.0",
    "sqlalchemy[asyncio]>=2.0.44,<3.0.0",
    "aiosqlite>=0.20.0,<0.21.0",
    "alembic>=1.13,<2.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.28,<0.29",
    "psutil>=6.1,<7.0",
    "python-json-logger>=4.0.0,<5.0.0",
    "tenacity>=9.0.0,<10.0.0",
    "weasyprint>=62.3,<69.0",
    "pydyf>=0.11.0,<0.12.0",
    "pydub>=0.25.1,<0.26.0",
    "telethon>=1.42.0,<2.0.0",
    "python-docx>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
faster-whisper = ["faster-whisper>=1.2.1,<2.0.0"]
openai-api = ["openai>=1.50.0,<2.0.0"]
telethon-speedup = ["cryptg>=0.4.0,<0.5.0"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=6.0,<7.0",
    "black>=24.10,<25.0",
    "ruff>=0.8,<0.9",
    "mypy>=1.13,<2.0",
    "alembic>=1.17.0,<2.0.0",
    "types-psutil>=6.1,<7.0",
    "bandit>=1.9.2,<2.0.0",
    "pre-commit>=4.0,<5.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
